Resolvi logica